# -alspac-data-catalogue-schema

./: .cruft.json  .gitignore  404.html  CONTRIBUTING.md  LICENSE  Makefile  Presentation.pptx  README.md  about.yaml  index.html  makeprog  mkdocs.yml  project.Makefile  pyproject.toml  sitemap.xml
AbstractDatasetPart/: index.html
AlspacDataCatalogue/: index.html
AlspacDataSetVersion/: index.html
AlspacDataSetVersionFreeze/: index.html
BespokeAlspacDataset/: index.html
DataContainer/: index.html
DataDistribution/: index.html
DatasetPart/: index.html
KnownIssue/: index.html
NamedAlspacDataSet/: index.html
NamedAlspacDataSetCollection/: index.html
NamedAlspacDataset/: index.html
NamedThing/: index.html
Paper/: index.html
Person/: index.html
PersonStatus/: index.html
QCKeyValue/: index.html
Script/: index.html
UGKeyValue/: index.html
about/: index.html
abstract_dataset_part/: index.html
age_in_years/: index.html
all_individuals_to_exclude_md5sum/: index.html
alspac-data-catalogue-schema/: index.html
authors/: index.html
belongsToContainer/: index.html
belongs_to_container/: index.html
birth_date/: index.html
bnumber/: index.html
code_name/: index.html
data_distribution/: index.html
data_distributions/: index.html
dataset_size/: index.html
date_of_release/: index.html
derived_from/: index.html
description/: index.html
documentation_authors_orcids/: index.html
entries/: index.html
examples/: README.md  alspac_data_catalogue-001.yaml  ge_ht12_g1.yaml  ge_ht12_g1_2015-11-02.yaml  named_alspac_data_set-001.yaml
filesize/: index.html
filetype/: index.html
(+248 files in other folders)
